sfSandBoxCode/force-app/main/default/objects/Employee_Role__c/Employee_Role__c.object-meta.xml
<CustomObject>
    <label>Employee Role</label>
    <nameField>
        <label>Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>