sfSandBoxCode/force-app/main/default/objects/Employee_Role__c/fields/Company_Division__c.field-meta.xml
<CustomField>
    <fullName>Company_Division__c</fullName>
    <label>Company Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fresh Life</fullName>
            </value>
            <value>
                <fullName>Sanergy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>