sfSandBoxCode/force-app/main/default/objects/Employee_Role__c/fields/Count_Groupings__c.field-meta.xml
<CustomField>
    <fullName>Count_Groupings__c</fullName>
    <label>Count Groupings</label>
    <summaryForeignKey>Employee_Role_Groupings__c.Employee_Role__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>