sfSandBoxCode/force-app/main/default/objects/Employee_Role__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department</label>
    <referenceTo>Sanergy_Department__c</referenceTo>
    <relationshipLabel>Employee Roles</relationshipLabel>
    <relationshipName>Employee_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>