sfSandBoxCode/force-app/main/default/objects/Employee_Role__c/fields/Has_Groupings__c.field-meta.xml
<CustomField>
    <fullName>Has_Groupings__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Groupings?</label>
    <type>Checkbox</type>
</CustomField>