sfSandBoxCode/force-app/main/default/objects/Employee_Role__c/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <description>Previous Job Title Name</description>
    <inlineHelpText>Previous Job Title Name</inlineHelpText>
    <label>Job Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>