sfSandBoxCode/force-app/main/default/objects/Employee_Role__c/fields/Role_Code__c.field-meta.xml
<CustomField>
    <fullName>Role_Code__c</fullName>
    <description>Role Code</description>
    <formula>Sanergy_Department_Unit__r.Department_Unit_Code__c + &quot;-&quot; +  Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Role Code</inlineHelpText>
    <label>Role Code</label>
    <type>Text</type>
</CustomField>