sfSandBoxCode/force-app/main/default/objects/Employee_Role__c/fields/Sanergy_Department__c.field-meta.xml
<CustomField>
    <fullName>Sanergy_Department__c</fullName>
    <formula>Sanergy_Department_Unit__r.Sanergy_Department__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sanergy Department</label>
    <type>Text</type>
</CustomField>