sfSandBoxCode/force-app/main/default/objects/Employee_Role__c/fields/Sanergy_Department_Unit__c.field-meta.xml
<CustomField>
    <fullName>Sanergy_Department_Unit__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Department Unit</label>
    <referenceTo>Sanergy_Department_Unit__c</referenceTo>
    <relationshipLabel>Employee Roles</relationshipLabel>
    <relationshipName>Employee_Roles</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>