sfSandBoxCode/force-app/main/default/objects/Employee_Role__c/fields/Shared_service__c.field-meta.xml
<CustomField>
    <fullName>Shared_service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shared service</label>
    <type>Checkbox</type>
</CustomField>