sfSandBoxCode/force-app/main/default/objects/Employee_Role__c/fields/Talent_Partner__c.field-meta.xml
<CustomField>
    <fullName>Talent_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Talent Partner</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Employee Roles (Talent Partner)</relationshipLabel>
    <relationshipName>Employee_Roles1</relationshipName>
    <type>Lookup</type>
</CustomField>