sfSandBoxCode/force-app/main/default/objects/Employee_Role__c/fields/Team_Lead__c.field-meta.xml
<CustomField>
    <fullName>Team_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Lead</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Employee Roles (Team Lead)</relationshipLabel>
    <relationshipName>Employee_Roles2</relationshipName>
    <type>Lookup</type>
</CustomField>