sfSandBoxCode/force-app/main/default/objects/Employee_Role__c/validationRules/Has_Groupings_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Has_Groupings_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Has_Groupings__c = true,Count_Groupings__c = 0)</errorConditionFormula>
    <errorMessage>You are not allowed to check this Box If No groupings are available</errorMessage>
</ValidationRule>