sfSandBoxCode/force-app/main/default/objects/Employee_Role__c/listViews/Talent_Director_Employee_Role.listView-meta.xml
<ListView>
    <fullName>Talent_Director_Employee_Role</fullName>
    <filterScope>Queue</filterScope>
    <label>Talent Directors</label>
    <queue>Talent_Director</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>